Fix nav link spacing

--- a/styles1.css
+++ b/styles1.css
@@ -208,12 +208,12 @@ footer {
     li {
         display: block;
         font-size: 14px;
-        padding: 0;
+        padding: 2px;
         text-align: right;
     }
 
     .dog-links {
-        margin-top: 9px;
+        margin-top: 2px;
         margin-left: auto;
         margin-right: 20px;
         width: 150px;
